# SpaceTravLR

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  app.py  pyproject.toml  requirements.txt  requirements_2.txt  setup.py
.cursor/rules/: pytest.mdc
.github/workflows/: python-package-conda.yml
data/: cellchat_mouse.csv  celltype_assign.json  small_melanoma.h5ad
data/slideseq/: celltype_assign.json
docs/source/: conf.py  index.rst
howto/: find_novel_targets.ipynb  perform_spatial_perturbations.ipynb
manuscript/human_melanoma_slidetags/: colors.json  figures2.ipynb
manuscript/human_tonsil_slidetags/: colors.json  figures3.ipynb
manuscript/mouse_embryo_slideseq/: colors.json  figures.ipynb
manuscript/mouse_kidney_xyzeq/: colors.json  figures2.ipynb  figures3.ipynb
manuscript/mouse_lymph_slideseq/: colors.json  figures.ipynb  figures2.ipynb
notebooks/: celloracle.ipynb  cellular_programs.ipynb  contact.ipynb  example.ipynb  gene_markers.ipynb  inference.ipynb  multi_genes.ipynb  niches.ipynb  perturb.py  perturb.sh  pyro.ipynb  regularize.ipynb  run.sh  simulated.ipynb  test_imputation.ipynb  test_transitions.ipynb  train.py  train_vit.py  transformer.ipynb  update.ipynb  utils.py  version2.ipynb  vit.ipynb
tests/: test_bayesian_regression.py  test_cnn.py  test_dataloaders.py  test_genefactory.py  test_geo_cnn.py  test_grn.py  test_inference.py  test_md5hash.py  test_model.py  test_oracle.py  test_prophet.py  test_queue.py  test_spacetravlr.py  test_spatial_maps.py  test_utils.py  test_vit.py
tutorial/: germinal_center.ipynb  launch.py
(+250 files in other folders)
