[project]
name = "SpaceTravLR"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "easydict>=1.13",
    "enlighten>=1.14.1",
    "group-lasso>=1.5.0",
    "magic-impute>=3.0.0",
    "networkx==3.2.1",
    "pqdm>=0.2.0",
    "pyarrow>=21.0.0",
    "pyro-ppl>=1.9.1",
    "pysal==24.1",
    "scanpy==1.10.2",
    "simple-slurm>=0.3.6",
    "torchvision>=0.23.0",
    "wordcloud>=1.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
